# 3dmolvis

./: CMakeLists.txt  LEEME.txt  README  README.txt  main.cpp  vmdgui.pro
examples/: simple.xml  storyboard.xml
examples/Aminoacidos/: aa.xml
examples/ESecundaria/: Ovalbumin.psf  secundaria.xml
i18n/es/: vmdgui_es.ts
lib/: AppHandler.cpp  AppHandler.h  CommandProcess.cpp  CommandProcess.h  OptionBox.cpp  OptionBox.h  VmdMainWindow.cpp  VmdMainWindow.h  VmdMainWindow.ui  Widgets.cpp  Widgets.h  version.h
lib/widgets/: AnimateWidget.cpp  AnimateWidget.h  AnimateWidget.ui  CommandLineWidget.cpp  CommandLineWidget.h  CommandLineWidget.ui  GLShadingWidget.cpp  GLShadingWidget.h  GLShadingWidget.ui  GenericWidget.cpp  GenericWidget.h  MouseModeWidget.cpp  MouseModeWidget.h  MouseModeWidget.ui  OutputWidget.cpp  OutputWidget.h  OutputWidget.ui  PlanesWidget.cpp  PlanesWidget.h  PlanesWidget.ui  ResetWidget.cpp  ResetWidget.h  ResetWidget.ui  RotaWidget.cpp  RotaWidget.h  RotaWidget.ui  RotationWidget.cpp  RotationWidget.h  RotationWidget.ui  ScaleWidget.cpp  ScaleWidget.h  ScaleWidget.ui  SimWidget.cpp  SimWidget.h  SimWidget.ui  StereoWidget.cpp  StereoWidget.h  StereoWidget.ui  VmdSim.cpp  VmdSim.h  (+3 more)
lib/widgets/simul/: autoimd.tcl  test.psf
lib/wizards/lesson/: GeneralData.cpp  GeneralData.h  GeneralData.ui  Introduction.cpp  Introduction.h  Introduction.ui  LessonWizard.cpp  LessonWizard.h  MRoleStringListModel.cpp  MRoleStringListModel.h  OriginData.cpp  OriginData.h  OriginData.ui  SaveLesson.cpp  SaveLesson.h  SaveLesson.ui  SelRep.cpp  SelRep.h  SelRep.ui  WidgetSelect.cpp  WidgetSelect.h  WidgetSelect.ui
lib/wizards/lessons/: GENERALDATA.ui  GeneralData.cpp  GeneralData.ui  INTRODUCTION.ui  Introduction.ui  ORIGINDATA.ui  OriginData.ui  SAVELESSON.ui  SELECTREPRESENTATION.ui  SaveLesson.ui  SelRep.ui  WIDGETSELECT.ui  WidgetSelect.ui
resource/: default.qrc
resource/dtd/: application.dtd
widgets/: CommandLineWidget.cpp  CommandLineWidget.h  CommandLineWidget.ui  OutputWidget.ui  widgets.h
